--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="card">
             <!--PUT GITHUB LINK -->
-            <a href="#"><img class="project-img" src="./assets/Portfolio.png" alt="Portfolio"/></a>
+            <a href="https://patrickzyeh.github.io/personal-portfolio/" target="_blank"><img class="project-img" src="./assets/Portfolio.png" alt="Portfolio"/></a>
             <h3 class="project-description">Portfolio Website</h3>
         </div>
 
