--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="about-body">
 
-        <p>Hi, my name is Patrick! I am an aspiring software developer that is interested in front-end web development and machine learning. I have a passion for programming and I am always eager to learn new things. When I am not programming, I enjoy working out, cooking, and going outdoors.</p>
+        <p>Hi, my name is Patrick! I am an aspiring software developer that is interested in full-stack web development and machine learning. I have a passion for programming and I am always eager to learn new things. When I am not programming, I enjoy working out, cooking, and going outdoors.</p>
 
     </div>
 
